fixed distorted images

--- a/src/index.css
+++ b/src/index.css
@@ -220,7 +220,6 @@ ul li {
 
 .product-tile {
   width: 100%;
-  height: 56vh;
   padding: 1em;
   background-color: #fff;
   position: relative;
@@ -326,8 +325,7 @@ ul li {
   display: flex;
 }
 .pdp__details__image {
-  width: 42.5vw;
-  height: 511px;
+  width: 35vw;
   margin-right: 10%;
 }
 .pdp__details__description {
@@ -516,16 +514,6 @@ ul li {
   width: 100%;
   height: 100%;
 }
-.cart-count__img-switcher .cart-count__img-container::after {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  background-color: #333;
-  opacity: 0.3;
-}
 .cart-count__img-switcher .cart-count__icon-container {
   display: flex;
   justify-content: space-between;
@@ -537,6 +525,8 @@ ul li {
   width: 20px;
   height: 20px;
   filter: invert(99%) sepia(1%) saturate(0%) hue-rotate(154deg) brightness(103%) contrast(102%);
+  background-color: #666;
+  border-radius: 30%;
 }
 
 .cart-overlay {
